<resources>
    <string name="app_name">Racer</string>
    <string name="action_settings">Settings</string>
    <string name="native_mobile_app">Native mobile App</string>
    <string name="web_app">Web App</string>

    <string name="url">Please enter URL...</string>
    <string name="history">History</string>
    <string name="start">Sequential</string>
    <string name="parallel">Parallel</string>
    <string name="steps">3 run</string>
    <string name="steps_one">steps</string>
    <string name="size">1 KB</string>
    <string name="size_one">KB</string>

    <string name="email">Enter your email...</string>
    <string name="please_wait">Please wait...</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="average">Average:</string>
    <string name="mediane">Mediane:</string>
    <string name="stand_deviation">Stand. Deviation:</string>
    <string name="average_origin">Average original:</string>
    <string name="mediane_original">Mediane original:</string>
    <string name="stand_deviation_original">Stand. deviation original:</string>
    <string name="summary">Summary</string>
    <string name="more">Expand more...</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="min_origin">Min original:</string>
    <string name="max_original">Max original:</string>
    <string name="home">dvictor74@gmail.com</string>
    <string name="title">nuu:bit Racer</string>
    <string name="summ_title_nuu">NUU:BIT</string>
    <string name="summ_title_org">Origin</string>
    <string name="detaile_format">Time, ms\n(Code response, request body size, KB/response body size, KB)</string>
    <string name="requests">Requests: </string>
</resources>
